--- a/108 CZ100RADIO x žánry.ipynb
+++ b/108 CZ100RADIO x žánry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "307fc44b",
+   "id": "41e6c63a",
    "metadata": {},
    "source": [
     "**Na co bacha**\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cf360a9d",
+   "id": "a8cf1cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "44d2e583",
+   "id": "6ae6d00c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c1c5bdb5",
+   "id": "24bb4cb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9dc7501",
+   "id": "01edaac6",
    "metadata": {},
    "source": [
     "## Nejzastoupenější žánry"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cca5794f",
+   "id": "d0afd29f",
    "metadata": {},
    "outputs": [
     {
@@ -95,29 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "acdd57be",
+   "execution_count": 61,
+   "id": "b6640e2a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'Index' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[57], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mzanry\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mzanry\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msort_values\u001b[49m\u001b[43m(\u001b[49m\u001b[43mascending\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mto_json(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata_raw\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mzanry_pro_anet.json\u001b[39m\u001b[38;5;124m\"\u001b[39m), indent \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m, force_ascii\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'Index' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "zanry.groupby('zanry').size().sort_values(ascending=False).index().to_json(os.path.join(\"data_raw\",\"zanry_pro_anet.json\"), indent = 4, force_ascii=False)"
+    "# zanry.groupby('zanry').size().sort_values(ascending=False).to_json(os.path.join(\"data_raw\",\"zanry_pro_anet.json\"), indent = 4, force_ascii=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3087b352",
+   "id": "ed8f6656",
    "metadata": {},
    "source": [
     "## Zastoupenost jednotlivých žánrů v čase"
@@ -126,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "277c5fcb",
+   "id": "485543d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8b32826",
+   "id": "399cfa25",
    "metadata": {},
    "source": [
     "Funkce vybírá všechny řádky obsahující řetězec (\"pop\" vrátí i \"pop rock\") a podělí je počtem písniček za daný rok. Druhý parametr filtruje pozice v žebříčku."
@@ -152,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ea6175fb",
+   "id": "26fc4a8a",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "eb82752a",
+   "id": "fdc36d12",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "4cdfe465",
+   "id": "de68be35",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6b7e7f22",
+   "id": "60b697f2",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "710fd267",
+   "id": "7b8c4014",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b8cdb626",
+   "id": "63787153",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "6464d428",
+   "id": "2b9f52f6",
    "metadata": {},
    "outputs": [
     {
