110 rádio CZ x SK

--- a/100 explorace CZ - RADIO - TOP 100.ipynb
+++ b/100 explorace CZ - RADIO - TOP 100.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1ee39c5b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e6a95d3e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c1f41d63",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "eca9a5c1",
    "metadata": {},
    "outputs": [
@@ -72,91 +72,98 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14785</th>\n",
-       "      <td>14885</td>\n",
+       "      <th>561</th>\n",
+       "      <td>661</td>\n",
        "      <td>CZ - RADIO - TOP 100</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>46</td>\n",
-       "      <td>86</td>\n",
-       "      <td>Atentát</td>\n",
-       "      <td>Kryštof</td>\n",
-       "      <td>Kryštof</td>\n",
-       "      <td>Warner Music</td>\n",
-       "      <td>2008-46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75065</th>\n",
-       "      <td>77865</td>\n",
-       "      <td>CZ - RADIO - TOP 100</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>37</td>\n",
-       "      <td>66</td>\n",
-       "      <td>Come Over</td>\n",
-       "      <td>Dagny</td>\n",
-       "      <td>Dagny</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>06</td>\n",
+       "      <td>62</td>\n",
+       "      <td>City Of Blinding Lights</td>\n",
+       "      <td>U2</td>\n",
+       "      <td>U2</td>\n",
        "      <td>Universal Music</td>\n",
-       "      <td>2020-37</td>\n",
+       "      <td>2006-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22185</th>\n",
-       "      <td>22285</td>\n",
+       "      <th>16734</th>\n",
+       "      <td>16834</td>\n",
        "      <td>CZ - RADIO - TOP 100</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>16</td>\n",
-       "      <td>86</td>\n",
-       "      <td>Hallelujah</td>\n",
-       "      <td>Alexandra Burke</td>\n",
-       "      <td>Alexandra Burke</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>15</td>\n",
+       "      <td>35</td>\n",
+       "      <td>If I Were A Boy</td>\n",
+       "      <td>Beyoncé</td>\n",
+       "      <td>Beyoncé</td>\n",
        "      <td>Sony Music</td>\n",
-       "      <td>2010-16</td>\n",
+       "      <td>2009-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>85347</th>\n",
-       "      <td>90547</td>\n",
+       "      <th>63690</th>\n",
+       "      <td>64090</td>\n",
        "      <td>CZ - RADIO - TOP 100</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>37</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Serotonin</td>\n",
-       "      <td>Tom Walker</td>\n",
-       "      <td>Tom Walker</td>\n",
-       "      <td>Sony Music</td>\n",
-       "      <td>2022-37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83383</th>\n",
-       "      <td>88583</td>\n",
-       "      <td>CZ - RADIO - TOP 100</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>16</td>\n",
-       "      <td>84</td>\n",
-       "      <td>Black Summer</td>\n",
-       "      <td>Red Hot Chili Peppers</td>\n",
-       "      <td>Red Hot Chili Peppers</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>24</td>\n",
+       "      <td>91</td>\n",
+       "      <td>Party</td>\n",
+       "      <td>Ofenbach &amp; Lack Of Afro &amp; Wax &amp; Herbal T</td>\n",
+       "      <td>Ofenbach</td>\n",
        "      <td>Warner Music</td>\n",
-       "      <td>2022-16</td>\n",
+       "      <td>2018-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26894</th>\n",
+       "      <td>26994</td>\n",
+       "      <td>CZ - RADIO - TOP 100</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>95</td>\n",
+       "      <td>Žít co to dá</td>\n",
+       "      <td>Ilona Csáková</td>\n",
+       "      <td>Ilona Csáková</td>\n",
+       "      <td>Warner Music</td>\n",
+       "      <td>2011-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3935</th>\n",
+       "      <td>4035</td>\n",
+       "      <td>CZ - RADIO - TOP 100</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>40</td>\n",
+       "      <td>36</td>\n",
+       "      <td>I Don´t Feel Like Dancin</td>\n",
+       "      <td>Scissor Sisters</td>\n",
+       "      <td>Scissor Sisters</td>\n",
+       "      <td>Universal Music</td>\n",
+       "      <td>2006-40</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0             hitparada   rok tyden  pozice         track  \\\n",
-       "14785       14885  CZ - RADIO - TOP 100  2008    46      86       Atentát   \n",
-       "75065       77865  CZ - RADIO - TOP 100  2020    37      66     Come Over   \n",
-       "22185       22285  CZ - RADIO - TOP 100  2010    16      86    Hallelujah   \n",
-       "85347       90547  CZ - RADIO - TOP 100  2022    37      48     Serotonin   \n",
-       "83383       88583  CZ - RADIO - TOP 100  2022    16      84  Black Summer   \n",
+       "       Unnamed: 0             hitparada   rok tyden  pozice  \\\n",
+       "561           661  CZ - RADIO - TOP 100  2006    06      62   \n",
+       "16734       16834  CZ - RADIO - TOP 100  2009    15      35   \n",
+       "63690       64090  CZ - RADIO - TOP 100  2018    24      91   \n",
+       "26894       26994  CZ - RADIO - TOP 100  2011    12      95   \n",
+       "3935         4035  CZ - RADIO - TOP 100  2006    40      36   \n",
        "\n",
-       "                   interpret       interpret_hlavni        vydavatel     week  \n",
-       "14785                Kryštof                Kryštof     Warner Music  2008-46  \n",
-       "75065                  Dagny                  Dagny  Universal Music  2020-37  \n",
-       "22185        Alexandra Burke        Alexandra Burke       Sony Music  2010-16  \n",
-       "85347             Tom Walker             Tom Walker       Sony Music  2022-37  \n",
-       "83383  Red Hot Chili Peppers  Red Hot Chili Peppers     Warner Music  2022-16  "
+       "                          track                                 interpret  \\\n",
+       "561     City Of Blinding Lights                                        U2   \n",
+       "16734           If I Were A Boy                                   Beyoncé   \n",
+       "63690                     Party  Ofenbach & Lack Of Afro & Wax & Herbal T   \n",
+       "26894              Žít co to dá                             Ilona Csáková   \n",
+       "3935   I Don´t Feel Like Dancin                           Scissor Sisters   \n",
+       "\n",
+       "      interpret_hlavni        vydavatel     week  \n",
+       "561                 U2  Universal Music  2006-06  \n",
+       "16734          Beyoncé       Sony Music  2009-15  \n",
+       "63690         Ofenbach     Warner Music  2018-24  \n",
+       "26894    Ilona Csáková     Warner Music  2011-12  \n",
+       "3935   Scissor Sisters  Universal Music  2006-40  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8532,7 +8539,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "d488e459",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -8585,6 +8594,98 @@
    ],
    "source": [
     "df[df['interpret'].str.lower().str.contains('nick cav',na=False)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcad7ed4",
+   "metadata": {},
+   "source": [
+    "## Podrtili týden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a5b0ccda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "week     interpret_hlavni\n",
+       "2022-05  Marek Ztracený      7\n",
+       "2019-49  Mirai               6\n",
+       "2020-02  Mirai               6\n",
+       "2020-04  Mirai               6\n",
+       "2020-05  Mirai               6\n",
+       "2020-06  Mirai               6\n",
+       "2020-08  Mirai               6\n",
+       "2020-09  Mirai               6\n",
+       "2022-05  Mirai               6\n",
+       "2022-10  Mirai               6\n",
+       "2022-12  Mirai               6\n",
+       "2022-17  Mirai               6\n",
+       "2022-32  Mirai               6\n",
+       "2009-48  P!Nk                5\n",
+       "2010-01  P!Nk                5\n",
+       "2010-06  Black Eyed Peas     5\n",
+       "2010-20  Inna                5\n",
+       "         Lady Gaga           5\n",
+       "2010-21  Inna                5\n",
+       "         Lady Gaga           5\n",
+       "Name: track, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['week','interpret_hlavni'])['track'].nunique().nlargest(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "174ca2cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "week     interpret_hlavni\n",
+       "2017-08  Chinaski            2\n",
+       "2017-34  Ed Sheeran          2\n",
+       "2017-46  Mirai               2\n",
+       "2006-01  Juanes              1\n",
+       "         Madonna             1\n",
+       "         Robbie Williams     1\n",
+       "         Sugababes           1\n",
+       "         Victoria            1\n",
+       "2006-02  Juanes              1\n",
+       "         Madonna             1\n",
+       "         Robbie Williams     1\n",
+       "         Sugababes           1\n",
+       "         Victoria            1\n",
+       "2006-03  Juanes              1\n",
+       "         Madonna             1\n",
+       "         Mattafix            1\n",
+       "         Robbie Williams     1\n",
+       "         Sugababes           1\n",
+       "2006-04  Helena Zeťová       1\n",
+       "         James Blunt         1\n",
+       "Name: track, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['pozice'] <= 5].groupby(['week','interpret_hlavni'])['track'].nunique().nlargest(20)"
    ]
   }
  ],
