--- a/107 CZ100RADIO x místo původu.ipynb
+++ b/107 CZ100RADIO x místo původu.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d30a2642",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "20cb7721",
    "metadata": {},
    "outputs": [],
@@ -470,6 +470,56 @@
    ],
    "source": [
     "pomer('Německo', 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d4b978e",
+   "metadata": {},
+   "source": [
+    "## Jak se točí domácí x zahraniční"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0c6e54b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0069444444444446"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[~df['zeme_puvodu'].isnull() & (df['zeme_puvodu'] == \"Česko\")].groupby('interpret_hlavni')['track'].nunique().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "feeac4a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.2883895131086143"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[~df['zeme_puvodu'].isnull() & (df['zeme_puvodu'] != \"Česko\")].groupby('interpret_hlavni')['track'].nunique().mean()"
    ]
   },
   {
