ručně zpracovaná data: anděl, slavík, žánry

--- a/106 CZ100RADIO x gender.ipynb
+++ b/106 CZ100RADIO x gender.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5cf531e7",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "66905835",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "978640cc",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b352b764",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "34a8cec9",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "2a73b186",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "Name: pozice, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "db03a0e3",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "Name: pozice, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "4a0db317",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "Name: track, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "31d7166c",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "df3a9073",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
        "Name: vek, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "00c3f90e",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "Name: vek, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "565c0588",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "Name: vek, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,6 +530,83 @@
    "metadata": {},
    "source": [
     "Poslední zjevení se v hitparádě: ženy o 4 roky dříve než muži."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "982c94d0",
+   "metadata": {},
+   "source": [
+    "## Podíl žen mezi českými interprety a mezi zahraničními"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cdcbf56d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "žena    0.321759\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df['zeme_puvodu'] == \"Česko\") & (df['gender'] == \"žena\")].groupby('gender').size() / len(df[(df['zeme_puvodu'] == \"Česko\") & (df['gender'].isin([\"muž\",\"žena\"]))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b67cbd40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "žena    0.381471\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df['zeme_puvodu'] != \"Česko\") & (~df['zeme_puvodu'].isnull()) & (df['gender'] == \"žena\")].groupby('gender').size() / len(df[(df['zeme_puvodu'] != \"Česko\") & (~df['zeme_puvodu'].isnull()) & (df['gender'].isin([\"muž\",\"žena\"]))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a8ee3d63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "žena    0.512305\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df['zeme_puvodu'] == \"Spojené státy americké\") & (df['gender'] == \"žena\")].groupby('gender').size() / len(df[(df['zeme_puvodu'] == \"Spojené státy americké\") & (df['gender'].isin([\"muž\",\"žena\"]))])"
    ]
   }
  ],
