--- a/111 CZ100RADIO cesta písničky do éteru.ipynb
+++ b/111 CZ100RADIO cesta písničky do éteru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bd2e1605",
+   "id": "7042231f",
    "metadata": {},
    "source": [
     "Pozor!\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9f54ec3f",
+   "id": "7bccba61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "19b3c6cd",
+   "id": "0705f539",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "aa019a48",
+   "id": "6b520261",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2586f437",
+   "id": "b122ec50",
    "metadata": {},
    "source": [
     "## Celkový přehled"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "706367c0",
+   "id": "078bf8e0",
    "metadata": {},
    "source": [
     "### Týden písně vs. pozice"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "cc51789a",
+   "id": "fc6177f1",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65d4342f",
+   "id": "9659a179",
    "metadata": {},
    "source": [
     "### Kolik týdnů v průměru trvalo jedničkám státi se jedničkou"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "ba0b2b67",
+   "id": "a971250e",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be9e0f79",
+   "id": "af8ba35a",
    "metadata": {},
    "source": [
     "#### Kontrola: kolik vlastně bylo hitů č. 1"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "36a19c35",
+   "id": "cd3cfe16",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45137749",
+   "id": "640160b9",
    "metadata": {},
    "source": [
     "Ale jo, to nejsou upe malá čísla → srovnání je ok."
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f37dd85",
+   "id": "b8ae72b7",
    "metadata": {},
    "source": [
     "## Pozoruhodné tracky"
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2191060e",
+   "id": "a380c608",
    "metadata": {},
    "source": [
     "### Ve kterém týdnu (ne od začátku vysílání, ale od prvního průniku do top 100!) se píseň stala #1 (Madonna neplatná, tou ta data začínají)"
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1519823d",
+   "id": "edc70e0d",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d163c7cf",
+   "id": "599e171c",
    "metadata": {},
    "source": [
     "### Těmto to naopak trvalo:"
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "721fc117",
+   "id": "f6514829",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3166516d",
+   "id": "0820ab9a",
    "metadata": {},
    "source": [
     "### Nejpozdější top 1 (tentokrát i ty co byly top 1 dříve)"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "36389f5f",
+   "id": "e4fa543e",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8d6d8f9",
+   "id": "17d33269",
    "metadata": {},
    "source": [
     "### Držáci top 10"
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0c2c47f9",
+   "id": "1dfd3067",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5680b172",
+   "id": "651a897f",
    "metadata": {},
    "source": [
     "### Držáci kdekoliv"
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "4e92d24b",
+   "id": "e6a539c7",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e61e30e",
+   "id": "784438da",
    "metadata": {},
    "source": [
     "## Grafy jednotlivých písní"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "2ac84bab",
+   "id": "b47bccd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "85ef7467",
+   "id": "d122b51a",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "50242923",
+   "id": "d4297c92",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "2639c49d",
+   "id": "4f677f99",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "d2d5f282",
+   "id": "57c0c8d1",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc0df40d",
+   "id": "13bc2042",
    "metadata": {},
    "source": [
     "## Srovnání se streamy"
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "689d5346",
+   "id": "40b08a21",
    "metadata": {},
    "source": [
     "Následuje kód nanic, ale vrátím se k němu snad."
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "b843c560",
+   "id": "94aee6cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "0e2d0635",
+   "id": "dea41522",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "c357ef71",
+   "id": "9dcdb3f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "7c7cd98f",
+   "id": "20dcfb60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "ef96896b",
+   "id": "010ed3b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "7d77a1f1",
+   "id": "3e6f6f4c",
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "b4f7421a",
+   "id": "45821961",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "84fba83f",
+   "id": "2c370a2c",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "ecd9c110",
+   "id": "ff042472",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7311c8d8",
+   "id": "e54315ca",
    "metadata": {},
    "source": [
     "## Srovnání se streamy: 2nd take"
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "90e03590",
+   "id": "f7d56eee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "27555ffd",
+   "id": "ad1bcea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "a79a0432",
+   "id": "592e8980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "9cdc11ae",
+   "id": "2c5d1673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "b9d4aa97",
+   "id": "0f975231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "ecb6c99b",
+   "id": "523975bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "2db71c8c",
+   "id": "5fe92072",
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "f9eb7193",
+   "id": "91ebb3e7",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "0e7b018d",
+   "id": "d9fd6445",
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "1c5286cf",
+   "id": "32a7b743",
    "metadata": {},
    "outputs": [
     {
@@ -1243,10 +1243,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce871f80",
+   "id": "7c3fc0cd",
    "metadata": {},
    "source": [
     "NAD TÍMTO SE POTŘEBUJU JEŠTĚ ZAMYSLET, ale zdá se, že mají rádia za streamy 9 týdnů zpoždění. Mega stres, že to interpretuju blbě!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb15a19f",
+   "metadata": {},
+   "source": [
+    "Todo: podívat se na proměny v čase."
    ]
   }
  ],
